# smart-layout-builder

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  PROJECT_STATE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-design.md  architecture.md  coding-standards.md  daily-log.md  database-schema.md  development-roadmap.md  features.md  folder-structure.md  plan.md  plugin-specification.md  spikes.md  testing-strategy.md  ui-ux.md
docs/prompts/: adaptive-positioning.md  cartographic-suggestions.md  export-optimization.md  layout-generation.md  legend-optimization.md  template-recommendation.md
docs/review/: architecture-review.md  architecture-scorecard.md  executive-review.md  implementation-order.md  mvp-recommendation.md  revised-roadmap.md  risk-analysis.md  simplification-plan.md
scripts/: package.py
slb/: __init__.py  errors.py  metadata.txt  plugin.py  version.py
slb/core/: __init__.py  layout.py  legend.py  strategies.py
slb/export/: __init__.py
slb/io/: __init__.py  safe_paths.py
slb/presets/: __init__.py  defaults.py  repository.py
slb/resources/builtin_presets/: classic_a3_landscape.json  classic_a4_portrait.json
slb/ui/: __init__.py  dock.py
slb/utils/: __init__.py  logging.py
spikes/: spike_atlas.py  spike_extent.py  spike_layout.py
tests/qgis/: test_defaults.py  test_legend.py  test_presets.py
