[project]
name = "smart-layout-builder"
description = "Auto layout, smart legend, and batch atlas export for QGIS."
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
dynamic = ["version"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
# Folder yang bukan paket plugin (spikes adalah eksperimen throwaway).
extend-exclude = ["spikes"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # panjang baris diatur black

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true   # stub PyQGIS tidak lengkap
check_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
